--- a/rapport/README.adoc
+++ b/rapport/README.adoc
@@ -16,7 +16,7 @@ ifdef::env-gitlab,env-browser[:outfilesuffix: .adoc]
 
 === Membres du groupe
 
-* Nom1
+* Arette-Hourquet Jean-Loup
 * Nom2
 * Nom3
 * Nom4
