--- a/rapport/architecture/ihm.adoc
+++ b/rapport/architecture/ihm.adoc
@@ -1,13 +1,8 @@
 === Interface utilisateur graphique
 
-Il peut y avoir une ou plusieurs interfaces utilisateur (UI en anglais),
-ou interface graphique, ou interface homme machine (IHM) : une interface
-sur ordinateur et/ou une interface sur mobile ou tablette (Android),
-selon le nombre d’appareils en jeu.
+image::../images/dashboard/3.png['Dashboard']
+image::../images/dashboard/4.png['Dashboard']
+image::../images/dashboard/12.png['Dashboard']
+image::../images/dashboard/13.png['Dashboard']
 
-En lien avec un diagramme de séquence, une description simple de chaque
-écran/page est nécessaire. Il est recommandé de faire des dessins, même
-dessins au crayon, photographiés ou scannés, car ce sont les meilleurs
-supports de discussion : on appelle souvent ces dessins un
-« storyboard ». Une description textuelle fait le lien entre tous les
-éléments de l’IHM (ou des IHMs).
+FAIRE LA DESCRIPTION
