--- a/rapport/proposition/etat-de-l-art.adoc
+++ b/rapport/proposition/etat-de-l-art.adoc
@@ -1,41 +1,7 @@
 === Description de l’état de l’art
 ifdef::env-gitlab,env-browser[:outfilesuffix: .adoc]
 
-*_Note : 1 page max._*
+Nous avons dégagé deux types d'applications : celles qui calculent un bilan carbone et d'autres qui proposent des alternatives ou qui récompensent les utilisateurs suivant leurs achats. Pour ce qui est des applications qui calculent le bilan carbone (Earth Hero, Klima), elles se fondent uniquement sur les quelques réponses que donnent les utilisateurs (pays de résidence, type de régime alimentaire, fréquence de vols en avion et type de logement) et calculent ensuite le bilan à partir de moyennes. Non seulement le résultat n'est que peu personnalisé, mais en plus il diffère d'une application à l'autre, parfois du simple au double pour les mêmes questions...
 
-Décrivez, en les citant via la bibliographie, les approches/produits
-ressemblant à votre projet et les différences éventuelles. Illustrez
-avec des images si besoin. Utilisez des renvois vers votre
-bibliographie : « comme démontré dans [2], … »
 
-==== XXX
-
-Et magnis dis parturient montes, nascetur ridiculus mus.
-
-Aenean risus dui, volutpat non, posuere vitae, sollicitudin in, urna.
-Nam eget eros a enim pulvinar rhoncus. Cum sociis natoque penatibus et
-magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisis
-massa ut massa. Sed nisi purus, malesuada eu, porta vulputate, suscipit
-auctor, nunc.
-
-==== ZZZ
-
-Et magnis dis parturient montes, nascetur ridiculus mus.
-
-Aenean risus dui, volutpat non, posuere vitae, sollicitudin in, urna.
-Nam eget eros a enim pulvinar rhoncus. Cum sociis natoque penatibus et
-magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisis
-massa ut massa. Sed nisi purus, malesuada eu, porta vulputate, suscipit
-auctor, nunc.
-
-==== Exemples de citations
-
-Les références bibliographiques sont regroupées dans le fichier `References.adoc`
-à la racine du répertoire `rapport`.
-On peut y faire référence dans toutes les sous parties du document.
-
-On peut citer comme exemple l'article de Claude E. Shannon sur la
-théorie de la communication <<RefShannon>>
-ou, bien évidement, la vitrine des projets PACT <<VitrinePACT>>.
-
-Voir <<TOTO,la référence>> très intéressante elle aussi.
+Ainsi, l'ambition de notre application est de calculer un bilan précis et le plus fiable possible. Notre application devra tout de même, pour certains paramètres, se baser sur des moyennes. En effet, il nous sera impossible d'estimer de manière précise la consommation ménagère de notre utilisateur. Deuxièmement, nous avons remarqué que les applications proposaient des actions concrètes (participer à des projets, s'informer sur les enjeux et les solutions, etc.). En contrepartie, l'utilisateur peut recevoir des points et/ou des récompenses (Ex : bon d'achat). Hormis l'aspect moralisateur du dernier point évoqué, elles demandent un véritable engagement de la part de l’utilisateur. De plus, encore une fois, les solutions proposées sont très générales et ne prennent pas en compte réellement les habitudes de l’utilisateur. Notre ambition est donc de proposer des alternatives personnalisées et adaptées aux capacités (financières, physiques ou morales) de l’utilisateur. Ces alternatives relèveraient toujours de l’engagement, mais seraient bien plus simples à mettre en place et ne perturberaient pas le train de vie de notre utilisateur.
