Résumé + modifications rapports

--- a/rapport/README.adoc
+++ b/rapport/README.adoc
@@ -34,22 +34,19 @@ ifdef::env-gitlab,env-browser[:outfilesuffix: .adoc]
 
 == Résumé du sujet choisi en français (PAN1)
 
-*_Note: 15 lignes max_*
-
-Décrire votre projet sans le scénariser : De quoi s’agit-il ? En quoi
-cette idée est compatible avec le thème de PACT ? Qu’est-ce qu’il
-permettrait de faire de façon générale.
+CAREBON est une application mobile mesurant l’impact carbone de son utilisateur. Celle-ci suit ses trajets mais aussi ses achats sur internet et en magasin ainsi que sa consommation ménagère.
+Cette application sera d’abord utilisée à l’échelle de Télécom Paris et potentiellement étendue à tout le plateau voir plus. Cela permettra aux utilisateurs de se rendre compte de leur impact carbone dans notre société à l’heure où une transition écologique s’impose.
+Afin d’avoir l’estimation la plus précise possible de son empreinte carbone, notre application prévoit des questions personnalisées à son utilisateur. 
+L’utilisateur aura à sa disposition sa consommation carbone, la répartition de celle-ci selon le domaine (consommation ménagère, transports, achats, alimentation) mais aussi l’évolution en fonction des jours. Des conseils et astuces seront aussi disponibles sur l’application pour diminuer ses émissions de carbone.
+Enfin, chaque utilisateur possèdera un compte et apportera la fonctionnalité de pouvoir se comparer avec ses amies possédant l’application.
 
 == English Summary (PAN1)
 
-*_Note : 15 lignes max, version anglaise du texte précédent_*
-
-Ligula dapibus egestas. Donec sed velit ac lectus mattis sagittis.
-
-In hac habitasse platea dictumst. Maecenas in ligula. Duis tincidunt
-odio sollicitudin quam. Nullam non mauris. Phasellus lacinia, velit sit
-amet bibendum euismod, leo diam interdum ligula, eu scelerisque sem
-purus in tellus.
+CAREBON is a mobile application that measures the carbon impact of its user. It tracks the user's journeys, purchases on the internet and in shops, and household consumption.
+This application will initially be used at the Télécom Paris level and could potentially be extended to the whole plateau or even more. This will enable users to become aware of their carbon impact in our society at a time when an ecological transition is needed.
+In order to have the most accurate estimate of its carbon footprint possible, our application provides users with personalised questions. 
+The user will have at his disposal his carbon consumption, the breakdown of it according to the field (household consumption, transport, purchases, food) but also the evolution according to the days. Tips and tricks will also be available on the application to reduce carbon emissions.
+Finally, each user will have an account and will be able to compare themselves with their friends who have the application.
 
 <<<
 
