--- a/rapport/architecture/schema.adoc
+++ b/rapport/architecture/schema.adoc
@@ -1,6 +1,6 @@
 === Schéma d’architecture
 
-image::../images/diagramme_architecture.png['Diagramme architectural']
+image::../images/diagramme_architecture.png['Diagramme architectural', 500, align="center"]
 
 ==== Description des blocs
 
