--- a/rapport/architecture/ihm.adoc
+++ b/rapport/architecture/ihm.adoc
@@ -1,8 +1,29 @@
 === Interface utilisateur graphique
 
-image::../images/dashboard/3.png['Dashboard']
-image::../images/dashboard/4.png['Dashboard']
-image::../images/dashboard/12.png['Dashboard']
-image::../images/dashboard/13.png['Dashboard']
+[%autowidth]
+[cols="1a,1", grid=none, frame=none]
+|===
 
-FAIRE LA DESCRIPTION
+|image::../images/dashboard/3.png['Dashboard', 300]
+^.^|Page d'accueil de l'application qui affiches la consoomation de l'utilisateur
+
+|image::../images/dashboard/4.png['Dashboard',300]
+^.^|Evolution de la consommation sur une période donnée avec la consommation des autres utilisateurs
+
+
+|image::../images/dashboard/5.png['Dashboard',300]
+^.^|Section permettant de scanner un article
+
+
+|image::../images/dashboard/6.png['Dashboard',300]
+^.^|Proposition d'actions/alternatives qui permettent de diminuer son empreinte carbone
+
+
+|image::../images/dashboard/7.png['Dashboard',300]
+^.^|Questionnaire à remplir par l'utilisateur
+
+
+|image::../images/dashboard/12.png['Dashboard',300]
+^.^|Interface du site web
+
+|===
