--- a/rapport/proposition/proposition.adoc
+++ b/rapport/proposition/proposition.adoc
@@ -1,9 +1,9 @@
 === Description de la proposition
 
-Comme dit lors du résumé, notre projet consisterait à developper une application mobile pour déterminer l’empreinte carbone de son utilisateur.
+Comme dit lors du résumé, notre projet consisterait à développer une application mobile pour déterminer l’empreinte carbone de son utilisateur.
 Bien que les activités de celui-ci ayant une empreinte environnementale sont facilement identifiables (transports, nourriture, achats sur internet, consommation du foyer), l’évaluation de ses données de manière précise est complexe.
-En effet, imaginons que notre application suive les coordonnées GPS de son utilisateur, comment savoir les rejets carbones de son moyen de locomotion ? Tous les moyen de transport n’ont pas la même empreinte et le nombre de personnes bénéficiant du même véhicule est à prendre en compte. Cette question soulève donc deux problèmes: le premier comment tenir compte du type et du modèle du véhicule mais aussi du nombre de personnes qui en bénéficient.Pour répondre à ces questions, nous questionnerons l’utilisateur à hauteur d’une ou deux questions ponctuelles. Cela permettrait d’affiner nos calculs. On pourrait ainsi lui demander par exemple son moyen de locomotion habituel, puis le modèle de sa voiture ou le nombre de personnes qui sont avec lui à bord.
-De plus, nous proposons que notre application puissent déduire de la vitesse de déplacement de l’utilisateur son moyen de locomotion. Cela éviterait de poser des questions inutiles, par exemple si la vitesse estimé est de 4 kilomètres par heure, nous éviterons de lui demander quel transport il utilise en déduisant qu’il est à pied.
+En effet, imaginons que notre application suive les coordonnées GPS de son utilisateur, comment savoir les rejets carbones de son moyen de locomotion ? Tous les moyen de transport n’ont pas la même empreinte et le nombre de personnes bénéficiant du même véhicule est à prendre en compte. Cette question soulève donc deux problèmes: le premier comment tenir compte du type et du modèle du véhicule mais aussi du nombre de personnes qui en bénéficient. Pour répondre à ces questions, nous questionnerons l’utilisateur à hauteur d’une ou deux questions ponctuelles. Cela permettrait d’affiner nos calculs. On pourrait ainsi lui demander par exemple son moyen de locomotion habituel, puis le modèle de sa voiture ou le nombre de personnes qui sont avec lui à bord.
+De plus, nous proposons que notre application puisse déduire de la vitesse de déplacement de l’utilisateur son moyen de locomotion. Cela éviterait de poser des questions inutiles, par exemple si la vitesse estimée est de 4 kilomètres par heure, nous éviterons de lui demander quel transport il utilise en déduisant qu’il est à pied.
 
 Un autre problème identifiable est: comment déterminer à partir d’un simple ticket de caisse, l’empreinte carbone des courses de notre utilisateur ? 
 Pour cela, nous utiliserons la base de données OpenFoodFacts, qui permet deux approches: la première consiste à prendre en photo l’article ou son QR code et la base de données va déterminer un eco score correspondant à l’article, cette procédure n’est pas instantanée; la seconde consiste à renseigner la catégorie et le label de l’article afin d’avoir un éco score de manière immédiate.
